2008-08-19  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_scroll_indicator_fade),
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_button_release_cb),
	(hildon_pannable_area_scroll_cb),
	(hildon_pannable_area_expose_event),
	(hildon_pannable_area_init): Added the define parameter
	SCROLLBAR_FADE_DELAY to control the fade effect of the scrollbars
	and refactor the fade variable.

2008-08-19  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_redraw),
	(hildon_pannable_area_scroll_indicator_fade): Refactored redraw
	lines, we were reimplemeting the redraw code.

2008-08-18  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_scroll_cb),
	(hildon_pannable_area_realize),
	(hildon_pannable_area_class_init): Added scroll_event management
	for pannable area, now we can scroll the usual desktop method.

	(hildon_pannable_area_jump_to): Fixed the logic of the method, the
	initialization of the parameters should depend on idle_id.

	(hildon_pannable_area_init),
	(hildon_pannable_area_map): Small code style modifications

2008-08-18  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_motion_notify_cb),
	(hildon_pannable_area_button_release_cb),
	(hildon_pannable_area_size_allocate),
	(hildon_pannable_area_scroll_to): Improved the timeouts
	management, we avoid creating them each time.

2008-08-14  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c:
	(hildon_pannable_area_refresh),
	(hildon_pannable_area_motion_notify_cb),
	(hildon_pannable_area_class_init):
	* src/hildon-pannable-area.h:
	* src/hildon-touch-selector.c
	(_create_new_column):
	* examples/hildon-pannable-area-example-4.c:
	(horizontal_movement),
	(vertical_movement),
	(main):
	Replaced the names of enums in the HildonPannableArea: